<resources>
    <string name="app_name">HttpApp</string>
    <string name="httpurlconnection_get">Send a get request using HttpURLConnnection</string>
    <string name="httpurlconnection_post">Send a post request using HttpURLConnection</string>
    <string name="okhttp_get">send a get request using OkHttp</string>
    <string name="okhttp_post">send a post request using OkHttp</string>
    <string name="title_activity_show_content">ShowContentActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="LinearLayoutManager">Linear</string>
    <string name="GridLayoutManager">Grid</string>
    <string name="StaggeredGridLayoutManager">StaggeredGrid</string>
    <string name="next">Next</string>
</resources>
