<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ali.android.httpapp.MainActivity">

    <Button
        android:id="@+id/getbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/httpurlconnection_get"

        />
    <Button
    android:id="@+id/postbtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/httpurlconnection_post"
    />
        <Button
            android:id="@+id/defaulthttp_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhttp_get"/>
        <Button
            android:id="@+id/defaulthttp_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhttp_post"/>


<Button
    android:id="@+id/next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/next"
    />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
